<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quiz.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/quiz_intro_text"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <Spinner
            android:id="@+id/game_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <EditText
            android:id="@+id/house_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:padding="8dp" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <CheckBox
            android:id="@+id/reese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reese" />

        <CheckBox
            android:id="@+id/timmy_tommy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timmy_tommy" />

        <CheckBox
            android:id="@+id/blathers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blathers" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/animal_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:padding="8dp" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6" />

        <CheckBox
            android:id="@+id/apples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apples" />

        <CheckBox
            android:id="@+id/peaches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peaches" />

        <CheckBox
            android:id="@+id/fish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish" />

        <CheckBox
            android:id="@+id/candy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candy" />

        <CheckBox
            android:id="@+id/chocolate_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_coins" />

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_7" />

        <!--<Spinner
            android:id="@+id/nookling_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/nephews_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nephews" />

            <RadioButton
                android:id="@+id/sons_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sons" />

            <RadioButton
                android:id="@+id/friends_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends" />

            <RadioButton
                android:id="@+id/grandsons_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grandsons" />

        </RadioGroup>

        <TextView
            style="@style/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_8" />

        <CheckBox
            android:id="@+id/orphans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orphans" />

        <CheckBox
            android:id="@+id/master_chefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_chefs" />

        <CheckBox
            android:id="@+id/sisters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sisters" />

        <CheckBox
            android:id="@+id/hedgehogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hedgehogs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkAnswers"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>